--- a/src/OC/BookingBundle/Resources/views/layout.html.twig
+++ b/src/OC/BookingBundle/Resources/views/layout.html.twig
@@ -7,7 +7,7 @@
 
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-            <link rel="stylesheet" href="../../web/css/style.css">
+            <link rel="stylesheet" href="{{ asset('./../web/css/style.css') }}">
         {% endblock %}
     </head>
 
@@ -16,7 +16,7 @@
         {% block navigation %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark margin">
             <a class="navbar-brand" href="{{ path("oc_booking_homepage") }}">
-                <img src="../../web/img/Louvre_Museum_icon_1.svg.png" width="30" height="auto">
+                <img src="{{ asset('./../web/img/Louvre_Museum_icon_1.svg.png') }}" width="30" height="auto">
                  Musée du Louvre
             </a>
         </nav>
