--- a/src/OC/BookingBundle/Resources/views/layout.html.twig
+++ b/src/OC/BookingBundle/Resources/views/layout.html.twig
@@ -7,6 +7,7 @@
 
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+            <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/dark.css">
             <link rel="stylesheet" href="{{ asset('./../web/css/style.css') }}">
         {% endblock %}
     </head>
@@ -45,6 +46,28 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="https://npmcdn.com/flatpickr/dist/l10n/fr.js"></script>
+        <script type="text/javascript">
+           $(function () {
+              let dateVisite = $('#oc_bookingbundle_booking_visitDate');
+              if(document.getElementById('oc_bookingbundle_booking_visitDate')) {
+                 dateVisite.flatpickr({
+                      locale: "fr",
+                     altInput: true,
+                     altFormat: "d-m-Y",
+                     defaultDate: "today",
+                     minDate: 'today',
+                     "disable":
+                         [
+                         function (date) {
+                             return (date.getDay() === 2);
+                         }
+                     ],
+                  });
+              }
+           });
+        </script>
         {% endblock %}
     </body>
 </html>
