--- a/src/OC/BookingBundle/Resources/views/Default/index.html.twig
+++ b/src/OC/BookingBundle/Resources/views/Default/index.html.twig
@@ -15,12 +15,13 @@
                 <p class="text-center lead">
                     Grâce a notre nouveau sytème de réservation en ligne, fini les files d'attente interminables !
                 </p>
-                <p class="lead text-center text-muted"> Pour commander vos billets, veuillez saisir une adresse e-mail pour continuer.</p>
+                <p class="lead text-center text-muted"> Pour commander vos billets, veuillez remplir le formulaire ci-dessous.</p>
                 <div class="form-group text-center">
                     {{ form(form) }}
                 </div>
-                        <small id="emailHelp" class="text-center form-text text-muted">Veuillez rentrer l'adresse à laquelle seront envoyés les billets.</small>
-                    </div>
+                    <small id="emailHelp" class="text-center form-text text-muted">Veuillez rentrer l'adresse à laquelle seront envoyés les billets.</small>
+                    <small id="choiceHelp" class="text-center form-text text-muted">Les billets Journée ne sont plus disponibles passé 14h00.</small>
+                </div>
             </div>
         </div>
     </body>
