--- a/src/OC/BookingBundle/Resources/views/layout.html.twig
+++ b/src/OC/BookingBundle/Resources/views/layout.html.twig
@@ -48,44 +48,116 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <script src="https://npmcdn.com/flatpickr/dist/l10n/fr.js"></script>
+        <script src="{{ asset('./../web/js/moment-with-locales.js') }}"></script>
         <script type="text/javascript">
            $(function () {
-              let dateVisite = $('#oc_bookingbundle_booking_visitDate');
-              if(document.getElementById('oc_bookingbundle_booking_visitDate')) {
-                 dateVisite.flatpickr({
-                     locale: "fr",
-                     altInput: true,
-                     enableTime: true,
-                     time_24hr: true,
-                     minDate: 'today',
-                     altFormat: "d-m-Y à H:i",
-                     defaultDate: "today",
-                     defaultHour: new Date().getHours(),
-                     defaultMinute: new Date().getMinutes(),
-                     "disable":
-                         [
-                         function (date) {
-                             return (date.getDay() === 2);
-                         }
-                     ],
-                  });
-              }
 
-              let dateVisit = dateVisite.val();
-              console.log(dateVisit);
-              let newDate = new Date();
-              console.log(newDate);
-              let visitTypeField = $('#oc_bookingbundle_booking_visitType');
+               // Enabling Bootstrap tooltips
+               $(function () {
+                   $('[data-toggle="tooltip"]').tooltip()
+               });
 
-              if (dateVisit >= 14)
-              {
-                  visitTypeField.val(0);
-                      visitTypeField.attr('disabled', true);
-              }
-              else {
-                  visitTypeField.val(1);
-                      visitTypeField.attr('disabled', false);
-              }
+               var dateVisite = $('#oc_bookingbundle_booking_visitDate');
+               let visitTypeField = $('#oc_bookingbundle_booking_visitType');
+
+               moment.locale('fr');
+
+               if(document.getElementById('oc_bookingbundle_booking_visitDate')) {
+                   dateVisite.flatpickr({
+                       locale: "fr",
+                       altInput: true,
+                       enableTime: true,
+                       time_24hr: true,
+                       defaultHour: new Date().getHours(),
+                       defaultMinute: new Date().getMinutes(),
+                       minDate: 'today',
+                       minHour: 'today',
+                       altFormat: "d-m-Y à H:i",
+                       defaultDate: new Date().getTime(),
+                       "disable":
+                           [
+                               function (date) {
+                                   return (
+                                       date.getDay() === 0
+                                       || date.getDay() === 2
+                                       || (date.getDate() === 1 && date.getMonth() === 4)
+                                       || (date.getDate() === 1 && date.getMonth() === 10)
+                                       || (date.getDate() === 25 && date.getMonth() === 11)
+                                   );
+                               }
+                           ],
+                       //When user change date manually, we need to re-check
+                       onValueUpdate: function () {
+                           let tdDate = dateVisite.val();
+                           console.log(tdDate);
+                           let dtCheck = moment().format('Y-MM-DD H:mm');
+                           console.log(dtCheck);
+                           let hrs = new Date().getHours();
+
+                           if(tdDate === dtCheck)
+                           {
+                               if(hrs >= 14) {
+                                   visitTypeField.val(0)
+                                       .css('pointer-events', 'none')
+                                       .attr('disabled', true)
+                                       .attr('readonly', 'readonly');
+                                   $('.wrapper').attr('data-original-title', 'Pas de billets Journée disponibles pour aujourd\'hui.');
+                               }
+                               else {
+                                   visitTypeField.prop('disabled', null)
+                                       .removeAttr('readonly')
+                                       .prop('style', null);
+                                   $('.wrapper').attr('data-original-title', null);
+                               }
+                           } else {
+                               visitTypeField.prop('disabled', null)
+                                   .removeAttr('readonly')
+                                   .prop('style', null);
+                               dateVisite.removeAttr('readonly');
+                               $('.wrapper').attr('data-original-title', null)
+                           }
+                       }
+                   });
+               }
+
+               var dateVisit = dateVisite.val();
+
+
+               let dateI = moment().format('Y-MM-DD H:mm');
+
+
+               let dt =  new Date();
+               let hour = dt.getHours();
+
+               function checkTime() {
+                   if(dateVisit === dateI)
+                   {
+                       if (hour >= 14)
+                       {
+                           visitTypeField.val(0)
+                               .css('pointer-events', 'none')
+                               .wrap('<span class="wrapper" tabindex="0" data-toggle="tooltip" data-original-title="Pas de billets Journée disponibles pour aujourd\'hui."></span>')
+                               .attr('disabled', true)
+                               .attr('readonly', 'readonly');
+                       }
+                       else {
+                           visitTypeField.val(1);
+                           visitTypeField.attr('disabled', false);
+                       }
+                   }
+                   else {
+                       visitTypeField.val(1).removeAttr('disabled');
+                   }
+               }
+
+               checkTime();
+
+
+               //Disabled input doesn't send values
+               // So removing disabled attribute when form is submitted
+               $('form[name=oc_bookingbundle_booking]').submit(function () {
+                   visitTypeField.attr('disabled', false)
+               });
            });
         </script>
         {% endblock %}
