--- a/src/OC/BookingBundle/Resources/views/layout.html.twig
+++ b/src/OC/BookingBundle/Resources/views/layout.html.twig
@@ -42,7 +42,7 @@
 
 
 
-        {% block javascripts %}
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -53,8 +53,9 @@
             $(function () {
                 // Enabling Bootstrap tooltips
                 $(function () {
-                    $('[data-toggle="tooltip"]').tooltip()
+                    $('[data-toggle="tooltip"]').tooltip();
                 });
+
                 var dateVisite = $('#oc_bookingbundle_booking_visitDate');
                 let visitTypeField = $('#oc_bookingbundle_booking_visitType');
                 moment.locale('fr');
@@ -146,6 +147,7 @@
                 });
             });
         </script>
+        {% block javascripts %}
         {% endblock %}
     </body>
 </html>
