--- a/src/OC/BookingBundle/Resources/views/Booking/book.html.twig
+++ b/src/OC/BookingBundle/Resources/views/Booking/book.html.twig
@@ -78,7 +78,7 @@
             <hr>
         {% endfor %}
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Valider</button>
+            <button type="submit" class="btn btn-lg btn-primary">Valider</button>
         </div>
         {{ form_rest(form) }}
         {{ form_end(form) }}
