Add redirection for book & checkout pages

--- a/src/OC/BookingBundle/Resources/views/Booking/checkout.html.twig
+++ b/src/OC/BookingBundle/Resources/views/Booking/checkout.html.twig
@@ -67,4 +67,6 @@
             <p id="order_total" class="lead">Montant total de votre commande :  {{ total }} €</p>
         </div>
     </div>
+    {% block javascripts %}
+    {% endblock %}
 {% endblock %}
