--- a/src/OC/BookingBundle/Resources/views/layout.html.twig
+++ b/src/OC/BookingBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
         {% block navigation %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark margin">
             <a class="navbar-brand" href="{{ path("oc_booking_homepage") }}">
-                <img src="{{ asset('./../web/img/Louvre_Museum_icon_1.svg.png') }}" width="30" height="auto">
+                <img  alt="louvre_logo" src="{{ asset('./../web/img/Louvre_Museum_icon_1.svg.png') }}" width="30" height="auto">
                  Musée du Louvre
             </a>
         </nav>
@@ -48,106 +48,107 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <script src="https://npmcdn.com/flatpickr/dist/l10n/fr.js"></script>
-        <script src="{{ asset('./../web/js/moment-with-locales.js') }}"></script>
-        <script type="text/javascript">
-            $(function () {
-                // Enabling Bootstrap tooltips
-                $(function () {
-                    $('[data-toggle="tooltip"]').tooltip();
-                });
 
-                var dateVisite = $('#oc_bookingbundle_booking_visitDate');
-                let visitTypeField = $('#oc_bookingbundle_booking_visitType');
-                moment.locale('fr');
-                if(document.getElementById('oc_bookingbundle_booking_visitDate')) {
-                    dateVisite.flatpickr({
-                        locale: "fr",
-                        altInput: true,
-                        enableTime: true,
-                        time_24hr: true,
-                        defaultHour: new Date().getHours(),
-                        defaultMinute: new Date().getMinutes(),
-                        minDate: 'today',
-                        minHour: 'today',
-                        altFormat: "d-m-Y à H:i",
-                        defaultDate: new Date().getTime(),
-                        "disable":
-                            [
-                                function (date) {
-                                    return (
-                                        date.getDay() === 0
-                                        || date.getDay() === 2
-                                        || (date.getDate() === 1 && date.getMonth() === 4)
-                                        || (date.getDate() === 1 && date.getMonth() === 10)
-                                        || (date.getDate() === 25 && date.getMonth() === 11)
-                                    );
-                                }
-                            ],
-                        //When user change date manually, we need to re-check
-                        onValueUpdate: function () {
-                            let tdDate = dateVisite.val();
-                            console.log(tdDate);
-                            let dtCheck = moment().format('Y-MM-DD H:mm');
-                            console.log(dtCheck);
-                            let hrs = new Date().getHours();
-                            if(tdDate === dtCheck)
-                            {
-                                if(hrs >= 14) {
-                                    visitTypeField.val(0)
-                                        .css('pointer-events', 'none')
-                                        .attr('disabled', true)
-                                        .attr('readonly', 'readonly');
-                                    $('.wrapper').attr('data-original-title', 'Pas de billets Journée disponibles pour aujourd\'hui.');
-                                }
-                                else {
+        {% block javascripts %}
+            <script src="{{ asset('./../web/js/moment-with-locales.js') }}"></script>
+            <script type="text/javascript">
+                $(function () {
+                    // Enabling Bootstrap tooltips
+                    $(function () {
+                        $('[data-toggle="tooltip"]').tooltip();
+                    });
+
+                    var dateVisite = $('#oc_bookingbundle_booking_visitDate');
+                    let visitTypeField = $('#oc_bookingbundle_booking_visitType');
+                    moment.locale('fr');
+                    if(document.getElementById('oc_bookingbundle_booking_visitDate')) {
+                        dateVisite.flatpickr({
+                            locale: "fr",
+                            altInput: true,
+                            enableTime: true,
+                            time_24hr: true,
+                            defaultHour: new Date().getHours(),
+                            defaultMinute: new Date().getMinutes(),
+                            minDate: 'today',
+                            minHour: 'today',
+                            altFormat: "d-m-Y à H:i",
+                            defaultDate: new Date().getTime(),
+                            "disable":
+                                [
+                                    function (date) {
+                                        return (
+                                            date.getDay() === 0
+                                            || date.getDay() === 2
+                                            || (date.getDate() === 1 && date.getMonth() === 4)
+                                            || (date.getDate() === 1 && date.getMonth() === 10)
+                                            || (date.getDate() === 25 && date.getMonth() === 11)
+                                        );
+                                    }
+                                ],
+                            //When user change date manually, we need to re-check
+                            onValueUpdate: function () {
+                                let tdDate = dateVisite.val();
+                                console.log(tdDate);
+                                let dtCheck = moment().format('Y-MM-DD H:mm');
+                                console.log(dtCheck);
+                                let hrs = new Date().getHours();
+                                if(tdDate === dtCheck)
+                                {
+                                    if(hrs >= 14) {
+                                        visitTypeField.val(0)
+                                            .css('pointer-events', 'none')
+                                            .attr('disabled', true)
+                                            .attr('readonly', 'readonly');
+                                        $('.wrapper').attr('data-original-title', 'Pas de billets Journée disponibles pour aujourd\'hui.');
+                                    }
+                                    else {
+                                        visitTypeField.prop('disabled', null)
+                                            .removeAttr('readonly')
+                                            .prop('style', null);
+                                        $('.wrapper').attr('data-original-title', null);
+                                    }
+                                } else {
                                     visitTypeField.prop('disabled', null)
                                         .removeAttr('readonly')
                                         .prop('style', null);
-                                    $('.wrapper').attr('data-original-title', null);
+                                    dateVisite.removeAttr('readonly');
+                                    $('.wrapper').attr('data-original-title', null)
                                 }
-                            } else {
-                                visitTypeField.prop('disabled', null)
-                                    .removeAttr('readonly')
-                                    .prop('style', null);
-                                dateVisite.removeAttr('readonly');
-                                $('.wrapper').attr('data-original-title', null)
+                            }
+                        });
+                    }
+                    var dateVisit = dateVisite.val();
+                    let dateI = moment().format('Y-MM-DD H:mm');
+                    let dt =  new Date();
+                    let hour = dt.getHours();
+                    function checkTime() {
+                        if(dateVisit === dateI)
+                        {
+                            if (hour >= 14)
+                            {
+                                visitTypeField.val(0)
+                                    .css('pointer-events', 'none')
+                                    .wrap('<span class="wrapper" tabindex="0" data-toggle="tooltip" data-original-title="Pas de billets Journée disponibles pour aujourd\'hui."></span>')
+                                    .attr('disabled', true)
+                                    .attr('readonly', 'readonly');
+                            }
+                            else {
+                                visitTypeField.val(1);
+                                visitTypeField.attr('disabled', false);
                             }
                         }
-                    });
-                }
-                var dateVisit = dateVisite.val();
-                let dateI = moment().format('Y-MM-DD H:mm');
-                let dt =  new Date();
-                let hour = dt.getHours();
-                function checkTime() {
-                    if(dateVisit === dateI)
-                    {
-                        if (hour >= 14)
-                        {
-                            visitTypeField.val(0)
-                                .css('pointer-events', 'none')
-                                .wrap('<span class="wrapper" tabindex="0" data-toggle="tooltip" data-original-title="Pas de billets Journée disponibles pour aujourd\'hui."></span>')
-                                .attr('disabled', true)
-                                .attr('readonly', 'readonly');
-                        }
                         else {
-                            visitTypeField.val(1);
-                            visitTypeField.attr('disabled', false);
+                            visitTypeField.val(1).removeAttr('disabled');
                         }
                     }
-                    else {
-                        visitTypeField.val(1).removeAttr('disabled');
-                    }
-                }
-                checkTime();
-                //Disabled input doesn't send values
-                // So removing disabled attribute when form is submitted
-                $('form[name=oc_bookingbundle_booking]').submit(function () {
-                    visitTypeField.attr('disabled', false)
+                    checkTime();
+                    //Disabled input doesn't send values
+                    // So removing disabled attribute when form is submitted
+                    $('form[name=oc_bookingbundle_booking]').submit(function () {
+                        visitTypeField.attr('disabled', false)
+                    });
                 });
-            });
-        </script>
-        {% block javascripts %}
+            </script>
         {% endblock %}
     </body>
 </html>
