Complete stripe integration, send email module

--- a/src/OC/BookingBundle/Resources/views/Booking/checkout.html.twig
+++ b/src/OC/BookingBundle/Resources/views/Booking/checkout.html.twig
@@ -80,6 +80,7 @@
                         data-locale="auto"
                         data-currency="eur">
                 </script>
+                <input type="text" name="total" value="{{ total }}" hidden>
             </form>
         </div>
 
