--- a/src/OC/BookingBundle/Resources/views/Email/test.html.twig
+++ b/src/OC/BookingBundle/Resources/views/Email/test.html.twig
@@ -8,7 +8,7 @@
 </head>
 <body class="mail_template" style="margin-top: 15px">
 <div class="container">
-    <div class="text-center"><img alt='logo_louvre' src="https://louvre.omen-design.com/web/img/logo_mail.svg.png"></div>
+    <div class="text-center"><img alt='logo_louvre' src="https://louvre.omen-design.com/web/img/logo_mail_dark.png"></div>
     <div class="jumbotron">
         <h1 class="text-center display-4">Votre commande</h1>
         <p class="text-center lead">
@@ -69,6 +69,15 @@
                     {% endfor %}
                     </tbody>
                 </table>
+            </div>
+            <div class="jumbotron jumbotron-fluid text-center">
+                <div class="container">
+                    <h1 class="display-4">Votre code de réservation</h1>
+                    <p class="lead">Nous vous invitons à présenter ce code unique à l'entrée du Musée
+                    pour authentifier votre commande !</p>
+                    <hr>
+                    <p class="display-4"><strong>{{ order.bookingToken }}</strong></p>
+                </div>
             </div>
         </div>
     </div>
