Fixed url path in email template

--- a/src/OC/BookingBundle/Resources/views/Email/email.html.twig
+++ b/src/OC/BookingBundle/Resources/views/Email/email.html.twig
@@ -8,7 +8,7 @@
 </head>
 <body class="mail_template" style="margin-top: 15px">
 <div class="container">
-    <a href="{{ path('oc_test_mail', {'id' : order.id}) }}">Le mail ne s'affiche pas correctement ? Cliquez ici</a>
+    <a href="{{ url('oc_test_mail', {'id' : order.id}) }}">Le mail ne s'affiche pas correctement ? Cliquez ici</a>
     <div class="text-center"><img alt='logo_louvre' src="https://louvre.omen-design.com/web/img/logo_mail_dark.png"></div>
     <div class="jumbotron">
         <h1 class="text-center display-4">Votre commande</h1>
